--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -1,4 +1,4 @@
-name: Docker
+name: Build EdgeDevice Docker Image
 
 on:
   workflow_dispatch:
@@ -24,8 +24,6 @@ jobs:
   # See also https://docs.docker.com/docker-hub/builds/
   push:
     runs-on: ubuntu-latest
-    if: github.event_name == 'push'
-
     permissions:
       contents: read
       packages: write
