--- a/dummy/edge-devices/package.json
+++ b/dummy/edge-devices/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "App.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "run": "node -r dotenv/config App.js"
   },
   "author": "Severin Högl",
   "license": "ISC",
