Training Model on cloud works

--- a/dummy/image-processing-cloud/Dockerfile
+++ b/dummy/image-processing-cloud/Dockerfile
@@ -4,6 +4,11 @@ RUN mkdir /app
  
 COPY . /app
 WORKDIR /app
+
+RUN wget https://github.com/sausheong/gonn/raw/master/mnist_dataset/mnist.zip
+RUN unzip mnist.zip
+RUN rm mnist.zip
+RUN mkdir /app/data
  
 RUN go build -o image-processing-cloud . 
 
