--- a/.github/workflows/sensor-cloud-worker.yml
+++ b/.github/workflows/sensor-cloud-worker.yml
@@ -14,7 +14,7 @@ on:
 
 env:
   # TODO: Change variable to your image's name.
-  IMAGE_NAME: sensor-cloud-worker.
+  IMAGE_NAME: sensor-cloud-worker
   
 defaults:
   run:
@@ -33,7 +33,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Build image
-        run: docker build --tag $IMAGE_NAME
+        run: docker build . --tag $IMAGE_NAME
 
       - name: Log into registry
         run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login docker.pkg.github.com -u ${{ github.actor }} --password-stdin
