--- a/.github/workflows/sensor-cloud-worker.yml
+++ b/.github/workflows/sensor-cloud-worker.yml
@@ -31,7 +31,15 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-
+      
+      - name: Set up JDK 1.14
+        uses: actions/setup-java@v1
+        with:
+          java-version: 1.14
+        
+      - name: Build with Maven
+        run: mvn -B package --file pom.xml
+      
       - name: Build image
         run: docker build . --tag $IMAGE_NAME
 
