image processing edge can no up and downstream

--- a/dummy/image-processing-worker/Dockerfile
+++ b/dummy/image-processing-worker/Dockerfile
@@ -4,9 +4,10 @@ RUN mkdir /app
  
 COPY . /app
 WORKDIR /app
- 
+
+RUN mkdir /app/data
 RUN go build -o image-processing-worker . 
 
-EXPOSE 5050
+EXPOSE 5051
 
 CMD [ "/app/image-processing-worker" ]
