Rename camera and edge-devices

--- a/dummy/camera-edge-device/Dockerfile
+++ b/dummy/camera-edge-device/Dockerfile
@@ -5,6 +5,6 @@ RUN mkdir /app
 COPY . /app
 WORKDIR /app
 
-RUN go build -o camera . 
+RUN go build -o camera-edge-device . 
 
-CMD [ "/app/camera"] 
+CMD [ "/app/camera-edge-device"] 
