--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -7,17 +7,17 @@ on:
     branches:
       - main
     paths:
-      - dummy/edge-devices/**
+      - dummy/sensor-edge-device/**
   # Run tests for any PRs.
   pull_request:
 
 env:
   # TODO: Change variable to your image's name.
-  IMAGE_NAME: edge-device
+  IMAGE_NAME: sensor-edge-device
   
 defaults:
   run:
-    working-directory: dummy/edge-devices/build
+    working-directory: dummy/sensor-edge-device/build
 
 jobs:
   # Push image to GitHub Packages.
