--- a/.github/workflows/image-processing-worker.yml
+++ b/.github/workflows/image-processing-worker.yml
@@ -1,4 +1,4 @@
-name: Build Image Processing Worker Docker Image
+name: Build Image Processing Edge Docker Image
 
 on:
   workflow_dispatch:
@@ -7,17 +7,17 @@ on:
     branches:
       - main
     paths:
-      - dummy/image-processing-worker/**
+      - dummy/image-processing-edge/**
   # Run tests for any PRs.
   pull_request:
 
 env:
   # TODO: Change variable to your image's name.
-  IMAGE_NAME: image-processing-worker
+  IMAGE_NAME: image-processing-edge
   
 defaults:
   run:
-    working-directory: dummy/image-processing-worker
+    working-directory: dummy/image-processing-edge
 
 jobs:
   # Push image to GitHub Packages.
