--- a/.github/workflows/camera-edge-device.yml
+++ b/.github/workflows/camera-edge-device.yml
@@ -13,11 +13,11 @@ on:
 
 env:
   # TODO: Change variable to your image's name.
-  IMAGE_NAME: amera-edge-device
+  IMAGE_NAME: camera-edge-device
   
 defaults:
   run:
-    working-directory: dummy/amera-edge-device
+    working-directory: dummy/camera-edge-device
 
 jobs:
   # Push image to GitHub Packages.
