--- a/docker-compose/docker-compose.yml
+++ b/docker-compose/docker-compose.yml
@@ -46,31 +46,22 @@ services:
       - "5052:5052"
     environment:
     - IMAGE_CLOUD_PORT=5052
-    - IMAGE_EDGE_IP=host.docker.internal
+    - IMAGE_EDGE_IP=image-processing-edge
     - IMAGE_EDGE_PORT=5051
-    - MONGODB_IP=host.docker.internal
+    - MONGODB_IP=mongodb
     - MONGODB_PORT=27017
-  image-processing-edge1:
+  image-processing-edge:
     image: docker.pkg.github.com/eco-bench/eco-bench/image-processing-edge:latest
     restart: unless-stopped
     ports:
       - "5051:5051"
     environment:
     - IMAGE_EDGE_PORT=5051
-    - IMAGE_CLOUD_IP=host.docker.internal
-    - IMAGE_CLOUD_PORT=5052
-  image-processing-edge2:
-    image: docker.pkg.github.com/eco-bench/eco-bench/image-processing-edge:latest
-    restart: unless-stopped
-    ports:
-      - "5053:5051"
-    environment:
-    - IMAGE_EDGE_PORT=5051
-    - IMAGE_CLOUD_IP=host.docker.internal
+    - IMAGE_CLOUD_IP=image-processing-cloud
     - IMAGE_CLOUD_PORT=5052
   camera-edge-device:
     image: docker.pkg.github.com/eco-bench/eco-bench/camera-edge-device:latest
     restart: unless-stopped
     environment:
-    - IMAGE_EDGE_IP=host.docker.internal
+    - IMAGE_EDGE_IP=image-processing-edge
     - IMAGE_EDGE_PORT=5051
