--- a/install-scripts/kube-edge/roles/master/tasks/main.yml
+++ b/install-scripts/kube-edge/roles/master/tasks/main.yml
@@ -21,5 +21,14 @@
     chdir: /src/github.com/kubeedge/kubeedge
     target: keadm
   become: yes
+- name: Copy file with owner and permission, using symbolic representation
+  become: yes
+  ansible.builtin.copy:
+    src: /src/github.com/kubeedge/kubeedge/_output/local/bin/keadm
+    dest: /usr/local/sbin
+    owner: root
+    group: root
+    remote_src: yes
+    mode: "0755"
 - name: initialize kubeedge
   shell: sudo /src/github.com/kubeedge/kubeedge/_output/local/bin/keadm init
