--- a/dummy/kubernetes/image-processing-cloud/image-processing-cloud-deployment.yaml
+++ b/dummy/kubernetes/image-processing-cloud/image-processing-cloud-deployment.yaml
@@ -35,7 +35,7 @@ spec:
               value: mongodb
             - name: MONGODB_PORT
               value: "27017"
-          image: docker.pkg.github.com/eco-bench/eco-bench/image-processing-cloud:latest
+          image: registry.hub.docker.com/ecobench/image-processing-cloud
           name: image-processing-cloud
           ports:
             - containerPort: 5052
