--- a/dummy/kubernetes/image-processing-edge/image-processing-edge-deployment.yaml
+++ b/dummy/kubernetes/image-processing-edge/image-processing-edge-deployment.yaml
@@ -31,7 +31,7 @@ spec:
               value: "5052"
             - name: IMAGE_EDGE_PORT
               value: "5051"
-          image: docker.pkg.github.com/eco-bench/eco-bench/image-processing-edge:latest
+          image: registry.hub.docker.com/ecobench/image-processing-edge
           name: image-processing-edge
           ports:
             - containerPort: 5051
