--- a/.github/workflows/image-processing-cloud.yml
+++ b/.github/workflows/image-processing-cloud.yml
@@ -26,7 +26,7 @@ jobs:
         with:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-          registry: docker.pkg.github.com/
+          registry: docker.pkg.github.com
           repository: ${{ github.repository }}/image-processing-cloud
           path: dummy/image-processing-cloud
 
