--- a/.github/workflows/image-processing-cloud.yml
+++ b/.github/workflows/image-processing-cloud.yml
@@ -36,6 +36,6 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
           password: ${{ secrets.DOCKER_HUB_PASSWORD }}
-          repository: ${{ github.repository }}/image-processing-cloud
+          repository: eco-bench/image-processing-cloud
           path: dummy/image-processing-cloud
           tags: lastest, ${{ github.run_number }}
