--- a/.github/workflows/sensor-cloud.yml
+++ b/.github/workflows/sensor-cloud.yml
@@ -43,10 +43,9 @@ jobs:
       - name: Build image
         run: docker build . --tag ${{ env.REPOSITORY }}/${{ env.IMAGE_NAME }}
         
-      - name: Login to Docker Registry
+      - name: Login to Docker Hub
         uses: docker/login-action@v1
         with:
-          registry: hub.docker.com
           username: ecobench
           password: ${{ secrets.DOCKER_HUB_PASSWORD }}
     
