--- a/.github/workflows/sensor-edge-device.yml
+++ b/.github/workflows/sensor-edge-device.yml
@@ -14,6 +14,7 @@ on:
 env:
   # TODO: Change variable to your image's name.
   IMAGE_NAME: sensor-edge-device
+  REPOSITORY: ecobench
   
 defaults:
   run:
@@ -32,29 +33,16 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Build image
-        run: docker build ../ --file Dockerfile --tag $IMAGE_NAME
+        run: docker build ../ --file Dockerfile --tag ${{ env.REPOSITORY }}/${{ env.IMAGE_NAME }}
 
-      - name: Log into registry
-        run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login docker.pkg.github.com -u ${{ github.actor }} --password-stdin
+      - name: Login to Docker Hub
+        uses: docker/login-action@v1
+        with:
+          username: ecobench
+          password: ${{ secrets.DOCKER_HUB_PASSWORD }}
+    
+      - name: Run docker push
+        run: docker push ${{ env.REPOSITORY }}/${{ env.IMAGE_NAME }}
 
-      - name: Push image
-        run: |
-          IMAGE_ID=docker.pkg.github.com/${{ github.repository }}/$IMAGE_NAME
-
-          # Change all uppercase to lowercase
-          IMAGE_ID=$(echo $IMAGE_ID | tr '[A-Z]' '[a-z]')
-
-          # Strip git ref prefix from version
-          VERSION=$(echo "${{ github.ref }}" | sed -e 's,.*/\(.*\),\1,')
-
-          # Strip "v" prefix from tag name
-          [[ "${{ github.ref }}" == "refs/tags/"* ]] && VERSION=$(echo $VERSION | sed -e 's/^v//')
-
-          # Use Docker `latest` tag convention
-          [ "$VERSION" == "main" ] && VERSION=latest
-
-          echo IMAGE_ID=$IMAGE_ID
-          echo VERSION=$VERSION
-
-          docker tag $IMAGE_NAME $IMAGE_ID:$VERSION
-          docker push $IMAGE_ID:$VERSION
+      - name: Name of Image 
+        run: echo "${{ env.REPOSITORY }}/${{ env.IMAGE_NAME }}"
