--- a/.github/workflows/image-processing-cloud.yml
+++ b/.github/workflows/image-processing-cloud.yml
@@ -10,6 +10,7 @@ on:
 
 env:
   IMAGE_NAME: image-processing-cloud
+  REPOSITORY: ecobench
   
 defaults:
   run:
@@ -20,22 +21,18 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-
-      - name: Publisch to Github Packages
-        uses: docker/build-push-action@v1
+      
+      - name: Build image
+        run: docker build . --tag ${{ env.REPOSITORY }}/${{ env.IMAGE_NAME }}
+        
+      - name: Login to Docker Hub
+        uses: docker/login-action@v1
         with:
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-          registry: docker.pkg.github.com
-          repository: ${{ github.repository }}/image-processing-cloud
-          path: dummy/image-processing-cloud
-
-          tags: lastest, ${{ github.run_number }}
-      - name: Publish to Docker Hub
-        uses: docker/build-push-action@v1
-        with:
-          username: ${{ secrets.DOCKER_HUB_USERNAME }}
+          username: ecobench
           password: ${{ secrets.DOCKER_HUB_PASSWORD }}
-          repository: eco-bench/image-processing-cloud
-          path: dummy/image-processing-cloud
-          tags: lastest, ${{ github.run_number }}
+    
+      - name: Run docker push
+        run: docker push ${{ env.REPOSITORY }}/${{ env.IMAGE_NAME }}
+
+      - name: Name of Image 
+        run: echo "${{ env.REPOSITORY }}/${{ env.IMAGE_NAME }}"
