Roboter can now receive message if plant should be picked

--- a/dummy/docker-compose.yaml
+++ b/dummy/docker-compose.yaml
@@ -19,6 +19,8 @@ services:
         restart: always
         env_file: ./camera-edge-device/.env
         build: ./camera-edge-device
+        ports:
+            - '5050:5050'
     mongodb:
         container_name: mongo
         image: mongo
