--- a/dummy/docker-compose.yaml
+++ b/dummy/docker-compose.yaml
@@ -14,7 +14,7 @@ services:
         env_file: ./image-processing-edge/.env
         ports:
             - '5051:5051'
-    camera:
+    camera-edge-device:
         container_name: camera-edge-device
         restart: always
         env_file: ./camera-edge-device/.env
