--- a/benchmarking/host.ini
+++ b/benchmarking/host.ini
@@ -1,9 +1,9 @@
 [all:vars]
 ansible_connection=ssh
-ansible_user=lucas
+ansible_user=daniel
 
 [server]
-server1 ansible_host=35.234.76.88
+server1 ansible_host=34.121.13.161
 
 [mongodb]
 server2 ansible_host=35.222.15.91
