--- a/dummy/kubernetes/sensor-cw-depl.yml
+++ b/dummy/kubernetes/sensor-cw-depl.yml
@@ -28,7 +28,7 @@ spec:
     spec:
       containers:
         - name: sensor-cw
-          image: docker.pkg.github.com/eco-bench/eco-bench/sensor-cloud:latest
+          image: ecobench/sensor-cloud:latest
           ports:
             - containerPort: 8080
           envFrom:
