--- a/dummy/kubernetes/sensor-ew1-depl.yml
+++ b/dummy/kubernetes/sensor-ew1-depl.yml
@@ -28,7 +28,7 @@ spec:
     spec:
       containers:
         - name: sensor-ew1
-          image: docker.pkg.github.com/eco-bench/eco-bench/sensor-edge:latest
+          image: ecobench/sensor-edge:latest
           ports:
             - containerPort: 80
           envFrom:
