fixes for pulling

--- a/dummy/kubernetes/sensor-ew1-depl.yml
+++ b/dummy/kubernetes/sensor-ew1-depl.yml
@@ -28,7 +28,8 @@ spec:
     spec:
       containers:
         - name: sensor-ew1
-          image: ecobench/sensor-edge:latest
+          image: ecobench/sensor-edge
+          imagePullPolicy: Always
           ports:
             - containerPort: 80
           envFrom:
