--- a/install-scripts/kube-edge/roles/master/tasks/main.yml
+++ b/install-scripts/kube-edge/roles/master/tasks/main.yml
@@ -11,24 +11,19 @@
 - name: check go version
   shell: go version
 - name: download kubeedge
-  git:
-    repo: 'https://github.com/kubeedge/kubeedge.git'
-    dest: $GOPATH/src/github.com/kubeedge/kubeedge
-    clone: yes
-    update: no
-- name: Run 'keadm' target as root
-  community.general.make:
-    chdir: /src/github.com/kubeedge/kubeedge
-    target: keadm
-  become: yes
-- name: Copy file with owner and permission, using symbolic representation
-  become: yes
-  ansible.builtin.copy:
-    src: /src/github.com/kubeedge/kubeedge/_output/local/bin/keadm
-    dest: /usr/local/sbin
-    owner: root
-    group: root
+  ansible.builtin.unarchive:
+    src: https://github.com/kubeedge/kubeedge/releases/download/v1.4.0/keadm-v1.4.0-linux-amd64.tar.gz
+    dest: /root
     remote_src: yes
-    mode: "0755"
+- name: Move keadm bin
+  command: mv /root/keadm-v1.4.0-linux-amd64/keadm/keadm /usr/local/bin
+#- name: Copy Kube Config
+#  command: cp /etc/kubernetes/admin.conf $HOME/.kube/config
 - name: initialize kubeedge
-  shell: sudo /src/github.com/kubeedge/kubeedge/_output/local/bin/keadm init
+  shell: keadm init --advertise-address="{{ hostvars['kubeedge-cluster-master-0']['ansible_host'] }}"
+- name: Generate Token
+  command: keadm gettoken --kube-config=/etc/kubernetes/admin.conf
+  register: generate_token_output
+- name: Set token
+  set_fact:
+    keadm_token: "{{ generate_token_output.stdout }}"
