Split worker and master for regions and fix ansible group for cloud edge split

--- a/install-scripts/hosts.ini
+++ b/install-scripts/hosts.ini
@@ -1,20 +1,28 @@
-kubeedge-cluster-master-0 ansible_user=root ansible_host=34.118.104.54 ip=10.186.0.20 etcd_member_name=etcd1
-kubeedge-cluster-worker-0 ansible_user=root ansible_host=34.118.65.241 ip=10.186.0.19
-kubeedge-cluster-worker-1 ansible_user=root ansible_host=34.118.121.149 ip=10.186.0.18
+kubeedge-cluster-master-0 ansible_user=ubuntu ansible_host=34.116.174.242 ip=10.186.0.21 etcd_member_name=etcd1
+kubeedge-cluster-worker-0 ansible_user=ubuntu ansible_host=34.105.123.237 ip=10.138.0.3
+kubeedge-cluster-worker-1 ansible_user=ubuntu ansible_host=34.145.88.194 ip=10.138.0.4
 
-[kube-master]
+[cloud]
 kubeedge-cluster-master-0
 
-[kube-master:vars]
-supplementary_addresses_in_ssl_keys = [ '34.118.103.31' ]
+[cloud:vars]
+supplementary_addresses_in_ssl_keys = [ 'null' ]
+kubernetes_role=master
 
 [etcd]
 kubeedge-cluster-master-0
 
-[kube-node]
+[edge]
 kubeedge-cluster-worker-0
 kubeedge-cluster-worker-1
 
+[edge:vars]
+supplementary_addresses_in_ssl_keys = [ 'null' ]
+kubernetes_role=edge
+
+[etcd]
+kubeedge-cluster-master-0
+
 [k8s-cluster:children]
-kube-master
-kube-node
+cloud
+edge
