--- a/install-scripts/hosts.ini
+++ b/install-scripts/hosts.ini
@@ -1,27 +1,31 @@
-kubeedge-cluster-master-0 ansible_user=ubuntu ansible_host=34.116.174.242 ip=10.186.0.21 etcd_member_name=etcd1
-kubeedge-cluster-worker-0 ansible_user=ubuntu ansible_host=34.105.123.237 ip=10.138.0.3
-kubeedge-cluster-worker-1 ansible_user=ubuntu ansible_host=34.145.88.194 ip=10.138.0.4
+ecob-k3s-master-0 ansible_user=ubuntu ansible_host=34.146.156.156 ip=10.146.0.7 etcd_member_name=etcd1
+ecob-mongodb ansible_user=ubuntu ansible_host=34.146.56.210 ip=10.146.0.6 etcd_member_name=etcd2
+ecob-k3s-worker-0 ansible_user=ubuntu ansible_host=34.79.187.74 ip=10.132.0.2
+ecob-k3s-worker-1 ansible_user=ubuntu ansible_host=34.79.73.52 ip=10.132.0.3
 
 [cloud]
-kubeedge-cluster-master-0
+ecob-k3s-master-0
+ecob-mongodb
 
 [cloud:vars]
 supplementary_addresses_in_ssl_keys = [ 'null' ]
 kubernetes_role=master
 
 [etcd]
-kubeedge-cluster-master-0
+ecob-k3s-master-0
+ecob-mongodb
 
 [edge]
-kubeedge-cluster-worker-0
-kubeedge-cluster-worker-1
+ecob-k3s-worker-0
+ecob-k3s-worker-1
 
 [edge:vars]
 supplementary_addresses_in_ssl_keys = [ 'null' ]
 kubernetes_role=edge
 
 [etcd]
-kubeedge-cluster-master-0
+ecob-k3s-master-0
+ecob-mongodb
 
 [k8s-cluster:children]
 cloud
