--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -66,13 +66,16 @@ jobs:
     # Install the latest version of Terraform CLI and configure the Terraform CLI configuration file with a Terraform Cloud user API token
     - name: Setup Terraform
       uses: hashicorp/setup-terraform@v1
-      with:
-        cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
 
     # Copy Service Account Secret to provisioning Directory
     - name: Create Service Account Json
       working-directory: ./install-scripts/provisioning
       run: touch service-account.json && echo ${{ secrets.GCE_SERVICE_ACCOUNT }} >> service-account.json
+      
+    # Copy Service Account Secret to provisioning Directory
+    - name: Create Service Account Json
+      working-directory: ./install-scripts/provisioning
+      run: echo ${{ secrets.GCE_SERVICE_ACCOUNT }} >> service-account.json
       
     # Confirm 
     - name: Terraform Init
