--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -105,6 +105,10 @@ jobs:
       working-directory: ./install-scripts/provisioning
       run: cat cluster.tfstate
     
+    - name: Verify
+      working-directory: ./install-scripts/provisioning
+      run: cat cluster.tfstate
+  
     - name: Generate Inventory File
       continue-on-error: true
       working-directory: ./install-scripts/provisioning
