--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -93,9 +93,9 @@ jobs:
       working-directory: ./install-scripts/provisioning
       run: terraform init
     
-#    - name: Terraform Destroy
-#      working-directory: ./install-scripts/provisioning
-#      run: ./destroy.sh
+    - name: Terraform Destroy
+      working-directory: ./install-scripts/provisioning
+      run: ./destroy.sh
 
     - name: Terraform Apply
       working-directory: ./install-scripts/provisioning
