--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -92,10 +92,6 @@ jobs:
     - name: Terraform Init
       working-directory: ./install-scripts/provisioning
       run: terraform init
-    
-    - name: Terraform Destroy
-      working-directory: ./install-scripts/provisioning
-      run: ./destroy.sh
 
     - name: Terraform Apply
       working-directory: ./install-scripts/provisioning
@@ -110,7 +106,13 @@ jobs:
       run: cat cluster.tfstate
   
     - name: Generate Inventory File
-      # continue-on-error: true
+      continue-on-error: true
       working-directory: ./install-scripts/provisioning
       run: bash ./generate-inventory.sh cluster.tfstate # > ../hosts.ini
     
+    - name: Sleep
+      run: sleep 10
+    
+    - name: Terraform Destroy
+      working-directory: ./install-scripts/provisioning
+      run: ./destroy.sh
